// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should-quotes.js format 1`] = `
====================================options=====================================
parsers: ["babel"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

a = {
  '50': string,
  '100': string,
  '200': string,
  '300': string,
  '400': string,}

=====================================output=====================================
// @flow

a = {
  "50": string,
  "100": string,
  "200": string,
  "300": string,
  "400": string,
};

================================================================================
`;

exports[`should-quotes.js.flow format 1`] = `
====================================options=====================================
parsers: ["babel"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================

a = {
  "50": string,
  "100": string,
  "200": string,
  "300": string,
  "400": string,}

=====================================output=====================================
a = {
  "50": string,
  "100": string,
  "200": string,
  "300": string,
  "400": string,
};

================================================================================
`;

exports[`should-unquote.js format 1`] = `
====================================options=====================================
parsers: ["babel"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================

a = {
  '50': string,
  '100': string,
  '200': string,
  '300': string,
  '400': string,}

=====================================output=====================================
a = {
  50: string,
  100: string,
  200: string,
  300: string,
  400: string,
};

================================================================================
`;
